# chatbot-langchain

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
data/vector_store/index.faiss/: index.faiss  index.pkl
docs/: CREATION_SUMMARY.md  INDEX.md  PROJECT_DOCUMENTATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  STRUCTURE.md  VIDEO_GUIDE.md
examples/: __init__.py  demo_api.py  demo_cli.py  demo_faq.py  demo_interactive.py
scripts/: __init__.py  check.py  demo_live.py  quick_start.py  rebuild_vectorstore.py  run.sh  setup.sh  show_fixes.py  test_openrouter.py
src/evals/: build_dataset_from_rbi_faq.py
src/rbi_nbfc_chatbot/: __init__.py  config.py
src/rbi_nbfc_chatbot/api/: __init__.py  server.py
src/rbi_nbfc_chatbot/chains/: __init__.py  rag_chain.py  retriever.py
src/rbi_nbfc_chatbot/evals/: __init__.py  langsmith_eval.py
src/rbi_nbfc_chatbot/utils/: __init__.py  document_loader.py  ingest.py
tests/: test_complete_system.py  test_rag_pipeline.py
